package org.example;// Clase: Sokoban

// Clase principal del juego
public class Sokoban {
    public static void main(String[] args) {
        new SokobanGUI();
    }
}